--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
     "description": "Center the content of a web page, usually relevant for old style web pages.",
     "version": "1.0",
     "manifest_version": 3,
-    "action":{
+    "action": {
 
     },
     "permissions": [
@@ -11,17 +11,22 @@
         "clipboardWrite",
         "scripting"
     ],
-
-    "background":{
-        "service_worker": "background.js",
-        "persistant":false
-    },
-    "content_scripts": [
-        {
-          "matches": ["*://*.linuxfromscratch.org/*","https://news.ycombinator.com/*","https://tldp.org/*","https://man7.org/*"],
-          "css":["default.css"]
+    "commands": {
+        "mute_tab_current": {
+            "description": "Mute/Unmute the selected tab",
+            "suggested_key": {
+                "default": "Ctrl+Shift+K"
+            }
         }
-      ]
-    
-  }
-  
+    },
+
+    "background": {
+        "service_worker": "background.js",
+        "persistant": false
+    },
+    "content_scripts": [{
+        "matches": ["*://*.linuxfromscratch.org/*", "https://news.ycombinator.com/*", "https://tldp.org/*", "https://man7.org/*"],
+        "css": ["default.css"]
+    }]
+
+}
