mute by default on twitter

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "permissions": [
         "activeTab",
         "clipboardWrite",
-        "scripting"
+        "scripting",
+        "webNavigation"
     ],
     "commands": {
         "mute_tab_current": {
