feat: add menue action and auto unmut/mute:
 - Auto mute, when adudio or video element is pasued or stopped
 - Auto un mute, when audio or video element start playing.
 - Add menu item to easily tirgger mute/unmute on right click,
  this might not be needed in future because of the previous two
  points.

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,8 @@
         "activeTab",
         "clipboardWrite",
         "scripting",
-        "webNavigation"
+        "webNavigation",
+        "contextMenus"
     ],
     "commands": {
         "mute_tab_current": {
@@ -26,8 +27,14 @@
         "persistant": false
     },
     "content_scripts": [{
-        "matches": ["*://*.linuxfromscratch.org/*", "https://news.ycombinator.com/*", "https://tldp.org/*", "https://man7.org/*"],
-        "css": ["default.css"]
-    }]
+            "matches": ["*://*.linuxfromscratch.org/*", "https://news.ycombinator.com/*", "https://tldp.org/*", "https://man7.org/*"],
+            "css": ["default.css"]
+        },
+        {
+            "matches": ["http://*/*", "https://*/*"],
+            "js": ["audio.js"]
+        }
+
+    ]
 
 }
